added save buttons, forms, and some javascript

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b1c2a0df1f.js" crossorigin="anonymous"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/af.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Daily Planner</title>
 </head>
@@ -26,99 +27,99 @@
                 <div class="col-2">
                   9:00am
                 </div>
-                <div class="col-8 mid">
-                  form here
-                </div>
+                <div class="col-8 mid form">
+                  <input type="text" class="form-control" id="text">
+                </div>    
                 <div class="col-2 right">
-                        <i class="far fa-save"></i>
+                    <button class="btn"><i class="far fa-save"></i></button>
                 </div>
               </div>
               <div class="row 2">
                     <div class="col-2">
                       10:00am
                     </div>
-                    <div class="col-8 mid">
-                      form here
+                    <div class="col-8 mid form">
+                      <input type="text" class="form-control" id="text">
                     </div>
                     <div class="col-2 right">
-                            <i class="far fa-save"></i>
+                        <button class="btn"><i class="far fa-save"></i></button>
                     </div>
                   </div>
                   <div class="row 3">
                         <div class="col-2">
                           11:00am
                         </div>
-                        <div class="col-8 mid">
-                          form here
+                        <div class="col-8 mid form">
+                          <input type="text" class="form-control" id="text">
                         </div>
                         <div class="col-2 right">
-                                <i class="far fa-save"></i>
+                            <button class="btn"><i class="far fa-save"></i></button>
                         </div>
                       </div>
                       <div class="row 4">
                             <div class="col-2">
                               12:00pm
                             </div>
-                            <div class="col-8 mid">
-                              form here
+                            <div class="col-8 mid form">
+                              <input type="text" class="form-control" id="text">
                             </div>
                             <div class="col-2 right">
-                                    <i class="far fa-save"></i>
+                                <button class="btn"><i class="far fa-save"></i></button>
                             </div>
                           </div>
                           <div class="row ">
                                 <div class="col-2">
                                   1:00pm
                                 </div>
-                                <div class="col-8 mid">
-                                  form here
+                                <div class="col-8 mid form">
+                                  <input type="text" class="form-control" id="text">
                                 </div>
                                 <div class="col-2 right">
-                                        <i class="far fa-save"></i>
+                                    <button class="btn"><i class="far fa-save"></i></button>
                                 </div>
                               </div>
                               <div class="row 6">
                                     <div class="col-2">
                                       2:00pm
                                     </div>
-                                    <div class="col-8 mid">
-                                      form here
+                                    <div class="col-8 mid form">
+                                      <input type="text" class="form-control" id="text">
                                     </div>
                                     <div class="col-2 right">
-                                            <i class="far fa-save"></i>
+                                        <button class="btn"><i class="far fa-save"></i></button>
                                     </div>
                                   </div>
                                   <div class="row 7">
                                         <div class="col-2">
                                           3:00pm
                                         </div>
-                                        <div class="col-8 mid">
-                                          form here
+                                        <div class="col-8 mid form">
+                                          <input type="text" class="form-control" id="text">
                                         </div>
                                         <div class="col-2 right">
-                                                <i class="far fa-save"></i>
+                                            <button class="btn"><i class="far fa-save"></i></button>
                                         </div>
                                       </div>
                                       <div class="row 8">
                                             <div class="col-2">
                                               4:00pm
                                             </div>
-                                            <div class="col-8 mid">
-                                              form here
+                                            <div class="col-8 mid form">
+                                              <input type="text" class="form-control" id="text">
                                             </div>
                                             <div class="col-2 right">
-                                                    <i class="far fa-save"></i>
+                                                <button class="btn"><i class="far fa-save"></i></button>
                                             </div>
                                           </div>
                                           <div class="row 9">
                                                 <div class="col-2">
                                                   5:00pm
                                                 </div>
-                                                <div class="col-8 mid">
-                                                  form here
+                                                <div class="col-8 mid form">
+                                                  <input type="text" class="form-control" id="text">
                                                 </div>
-                                                <div class="col-2 right">
-                                                        <i class="far fa-save"></i>
+                                                <div class="col-2 right">                                         
+                                                    <button class="btn"><i class="far fa-save"></i></button>
                                                 </div>
                                             </div>
          </div>
