--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/b1c2a0df1f.js" crossorigin="anonymous"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/af.js"></script>
+    <script type ="text/javascript" src="Moment/moment.js"></script> 
     <link rel="stylesheet" href="style.css">
     <title>Daily Planner</title>
 </head>
@@ -19,7 +19,7 @@
         <div id="main-header">
             <h1>Daily Planner</h1>
             <br>
-            <h2>date goes here</h2>
+            <h2 id="date">date goes here</h2>
             <hr>
         </div>
      <div class="body-header container-fluid">   
