--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <input type="text" class="form-control" id="text">
                 </div>    
                 <div class="col-2 right">
-                    <button class="btn"><i class="far fa-save"></i></button>
+                    <button class="btn save-btn"><i class="far fa-save"></i></button>
                 </div>
               </div>
               <div class="row 2">
