--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                       <input type="text" class="form-control" id="text">
                     </div>
                     <div class="col-2 right">
-                        <button class="btn"><i class="far fa-save"></i></button>
+                        <button class="btn save-btn"><i class="far fa-save"></i></button>
                     </div>
                   </div>
                   <div class="row 3">
@@ -53,7 +53,7 @@
                           <input type="text" class="form-control" id="text">
                         </div>
                         <div class="col-2 right">
-                            <button class="btn"><i class="far fa-save"></i></button>
+                            <button class="btn save-btn"><i class="far fa-save"></i></button>
                         </div>
                       </div>
                       <div class="row 4">
@@ -64,7 +64,7 @@
                               <input type="text" class="form-control" id="text">
                             </div>
                             <div class="col-2 right">
-                                <button class="btn"><i class="far fa-save"></i></button>
+                                <button class="btn save-btn" data-taskIndex="3"><i class="far fa-save"></i></button>
                             </div>
                           </div>
                           <div class="row ">
@@ -75,7 +75,7 @@
                                   <input type="text" class="form-control" id="text">
                                 </div>
                                 <div class="col-2 right">
-                                    <button class="btn"><i class="far fa-save"></i></button>
+                                    <button class="btn save-btn"><i class="far fa-save"></i></button>
                                 </div>
                               </div>
                               <div class="row 6">
@@ -86,7 +86,7 @@
                                       <input type="text" class="form-control" id="text">
                                     </div>
                                     <div class="col-2 right">
-                                        <button class="btn"><i class="far fa-save"></i></button>
+                                        <button class="btn save-btn"><i class="far fa-save"></i></button>
                                     </div>
                                   </div>
                                   <div class="row 7">
@@ -97,7 +97,7 @@
                                           <input type="text" class="form-control" id="text">
                                         </div>
                                         <div class="col-2 right">
-                                            <button class="btn"><i class="far fa-save"></i></button>
+                                            <button class="btn save-btn"><i class="far fa-save"></i></button>
                                         </div>
                                       </div>
                                       <div class="row 8">
@@ -108,7 +108,7 @@
                                               <input type="text" class="form-control" id="text">
                                             </div>
                                             <div class="col-2 right">
-                                                <button class="btn"><i class="far fa-save"></i></button>
+                                                <button class="btn save-btn"><i class="far fa-save"></i></button>
                                             </div>
                                           </div>
                                           <div class="row 9">
@@ -119,7 +119,7 @@
                                                   <input type="text" class="form-control" id="text">
                                                 </div>
                                                 <div class="col-2 right">                                         
-                                                    <button class="btn"><i class="far fa-save"></i></button>
+                                                    <button class="btn save-btn"><i class="far fa-save"></i></button>
                                                 </div>
                                             </div>
          </div>
