--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   9:00am
                 </div>
                 <div class="col-8 mid form">
-                  <input type="text" class="form-control" id="text">
+                  <input type="text" class="form-control" id="hour-9">
                 </div>    
                 <div class="col-2 right">
                     <button class="btn save-btn"><i class="far fa-save"></i></button>
@@ -39,7 +39,7 @@
                       10:00am
                     </div>
                     <div class="col-8 mid form">
-                      <input type="text" class="form-control" id="text">
+                      <input type="text" class="form-control" id="hour-10">
                     </div>
                     <div class="col-2 right">
                         <button class="btn save-btn"><i class="far fa-save"></i></button>
@@ -50,7 +50,7 @@
                           11:00am
                         </div>
                         <div class="col-8 mid form">
-                          <input type="text" class="form-control" id="text">
+                          <input type="text" class="form-control" id="hour-11">
                         </div>
                         <div class="col-2 right">
                             <button class="btn save-btn"><i class="far fa-save"></i></button>
@@ -61,7 +61,7 @@
                               12:00pm
                             </div>
                             <div class="col-8 mid form">
-                              <input type="text" class="form-control" id="text">
+                              <input type="text" class="form-control" id="hour-12">
                             </div>
                             <div class="col-2 right">
                                 <button class="btn save-btn" data-taskIndex="3"><i class="far fa-save"></i></button>
@@ -72,7 +72,7 @@
                                   1:00pm
                                 </div>
                                 <div class="col-8 mid form">
-                                  <input type="text" class="form-control" id="text">
+                                  <input type="text" class="form-control" id="hour-13">
                                 </div>
                                 <div class="col-2 right">
                                     <button class="btn save-btn"><i class="far fa-save"></i></button>
@@ -83,7 +83,7 @@
                                       2:00pm
                                     </div>
                                     <div class="col-8 mid form">
-                                      <input type="text" class="form-control" id="text">
+                                      <input type="text" class="form-control" id="hour-14">
                                     </div>
                                     <div class="col-2 right">
                                         <button class="btn save-btn"><i class="far fa-save"></i></button>
@@ -94,7 +94,7 @@
                                           3:00pm
                                         </div>
                                         <div class="col-8 mid form">
-                                          <input type="text" class="form-control" id="text">
+                                          <input type="text" class="form-control" id="hour-15">
                                         </div>
                                         <div class="col-2 right">
                                             <button class="btn save-btn"><i class="far fa-save"></i></button>
@@ -105,7 +105,7 @@
                                               4:00pm
                                             </div>
                                             <div class="col-8 mid form">
-                                              <input type="text" class="form-control" id="text">
+                                              <input type="text" class="form-control" id="hour-16">
                                             </div>
                                             <div class="col-2 right">
                                                 <button class="btn save-btn"><i class="far fa-save"></i></button>
@@ -116,7 +116,7 @@
                                                   5:00pm
                                                 </div>
                                                 <div class="col-8 mid form">
-                                                  <input type="text" class="form-control" id="text">
+                                                  <input type="text" class="form-control" id="hour-17">
                                                 </div>
                                                 <div class="col-2 right">                                         
                                                     <button class="btn save-btn"><i class="far fa-save"></i></button>
